--- a/ColorDelegateApp/Storyboards/Base.lproj/Main.storyboard
+++ b/ColorDelegateApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sFI-za-PU0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sFI-za-PU0">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -39,14 +39,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BFj-r3-dxN">
-                                <rect key="frame" x="20" y="20" width="280" height="120"/>
+                                <rect key="frame" x="20" y="20" width="280" height="80"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="gHr-29-xJB"/>
+                                    <constraint firstAttribute="height" constant="80" id="gHr-29-xJB"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hd0-yv-Kro">
-                                <rect key="frame" x="20" y="160" width="280" height="118"/>
+                                <rect key="frame" x="20" y="120" width="280" height="118"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="d84-c4-uGk">
                                         <rect key="frame" x="0.0" y="0.0" width="52" height="118"/>
@@ -107,21 +107,21 @@
                                                 <rect key="frame" x="-2" y="0.0" width="117" height="31.5"/>
                                                 <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
                                                 <connections>
-                                                    <action selector="changeColorSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="KZD-Qg-rRX"/>
+                                                    <action selector="rgbSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="1j0-zo-q9B"/>
                                                 </connections>
                                             </slider>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="YRM-N8-fgE">
                                                 <rect key="frame" x="-2" y="43.5" width="117" height="32"/>
                                                 <color key="minimumTrackTintColor" systemColor="systemGreenColor"/>
                                                 <connections>
-                                                    <action selector="changeColorSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="51d-Kd-b9C"/>
+                                                    <action selector="rgbSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="uNC-Va-Etr"/>
                                                 </connections>
                                             </slider>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nKp-Jn-TsT">
                                                 <rect key="frame" x="-2" y="87.5" width="117" height="31.5"/>
                                                 <color key="minimumTrackTintColor" systemColor="systemBlueColor"/>
                                                 <connections>
-                                                    <action selector="changeColorSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="ZRh-y1-aLQ"/>
+                                                    <action selector="rgbSlider:" destination="lNb-gH-FYh" eventType="valueChanged" id="MDc-a8-bAn"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
@@ -133,16 +133,25 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="45" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="lNb-gH-FYh" id="Whs-2e-kTy"/>
+                                                </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uvw-jY-mWn">
                                                 <rect key="frame" x="0.0" y="42" width="45" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="lNb-gH-FYh" id="Vxw-V4-3fR"/>
+                                                </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-No-hMd">
                                                 <rect key="frame" x="0.0" y="84" width="45" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="lNb-gH-FYh" id="0rV-H5-pCy"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                         <constraints>
@@ -152,7 +161,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pvo-UF-YeC">
-                                <rect key="frame" x="120" y="298" width="80" height="32"/>
+                                <rect key="frame" x="120" y="258" width="80" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="er1-aE-mwa"/>
                                 </constraints>
@@ -161,6 +170,9 @@
                                 <state key="normal" title="DONE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="doneButtonPressed" destination="lNb-gH-FYh" eventType="touchUpInside" id="YhJ-DL-w78"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hoz-C2-Dse"/>
@@ -178,12 +190,15 @@
                     </view>
                     <connections>
                         <outlet property="blueColorLabel" destination="2Mz-v6-oly" id="545-Cn-Hb4"/>
+                        <outlet property="blueColorSlider" destination="nKp-Jn-TsT" id="dST-u3-gbN"/>
                         <outlet property="blueColorTextField" destination="vuh-No-hMd" id="dx9-Wu-Zvp"/>
                         <outlet property="greenColorLabel" destination="fC1-UR-uZn" id="JHB-dZ-uok"/>
+                        <outlet property="greenColorSlider" destination="YRM-N8-fgE" id="95g-sC-b7k"/>
                         <outlet property="greenColorTextField" destination="uvw-jY-mWn" id="KdI-Em-7G1"/>
-                        <outlet property="previewColorView" destination="BFj-r3-dxN" id="K0r-mf-0Im"/>
                         <outlet property="redColorLabel" destination="YQf-rL-LN9" id="hpg-ph-r2h"/>
-                        <outlet property="redColorTextFlied" destination="JY7-8Y-nuM" id="NKm-1u-pQs"/>
+                        <outlet property="redColorSlider" destination="nM5-nJ-MqL" id="Tso-bN-ke5"/>
+                        <outlet property="redColorTextField" destination="JY7-8Y-nuM" id="NKm-1u-pQs"/>
+                        <outlet property="settingColorView" destination="BFj-r3-dxN" id="K0r-mf-0Im"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7dE-C3-JSW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -193,6 +208,7 @@
         <!--Navigation Controller-->
         <scene sceneID="0TH-yf-Drg">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LqI-AP-dbK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sFI-za-PU0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eni-ir-wcY">
@@ -204,7 +220,6 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yQr-84-p1e"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LqI-AP-dbK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
